rename `xiaoming-platform-api` to `xiaoming-platform-core-api` and add some interfaces

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'xiaoming-platform'
-include 'xiaoming-platform-api'
+include 'xiaoming-platform-core-api'
 include 'xiaoming-platform-core'
 
