--- a/xiaoming-platform-core/build.gradle
+++ b/xiaoming-platform-core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
 }
 
 group 'cn.codethink'
@@ -12,6 +13,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    api project(':xiaoming-platform-core-api')
 }
 
 test {
