--- a/xiaoming-platform-core-api/build.gradle
+++ b/xiaoming-platform-core-api/build.gradle
@@ -6,12 +6,15 @@ group 'cn.codethink'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'cn.codethink:codethink-common:1.0-SNAPSHOT'
 }
 
 test {
