add config related to compilation

--- a/xiaoming-platform-core/build.gradle
+++ b/xiaoming-platform-core/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'java-library'
 }
 
+def compileVersion = '8'
+compileJava.sourceCompatibility compileVersion
+compileJava.targetCompatibility compileVersion
+
 repositories {
     mavenLocal()
     mavenCentral()
